<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenLauncher</string>

    <string name="info">Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="add_widget">Widget</string>
    <string name="remove">Remove</string>
    <string name="allApps">All Apps</string>
    <string name="crash">Something went wrong … restarting OpenLauncher.</string>

    <string name="toast_rename">Rename</string>
    <string name="toast_notenoughspace">Not enough space</string>
    <string name="toast_appuninstalled">This app has uninstalled.</string>
    <string name="toast_freeram" formatted="false">Free Memory: %d mb saved %d mb</string>
    <string name="toast_freeallram" formatted="false">Free Memory: %d mb Your ram is in best state</string>
    <string name="toast_plzenabledeviceadmin">Please enable device administration</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="set_as_home">Home</string>
    <string name="search_apps">Search apps …</string>
    <string name="launcherInfo"><![CDATA[
                                    Open source project<br>
                                    Copyright <a href="http://bennykok.weebly.com/projects.html">BennyKok</a> @2016-2017<br><br>

                                    <a href="https://github.com/BennyKok/OpenLauncher/wiki/Open-Source-libraries">Open Source libraries</a><br><br>

                                    Credit:<br>
                                    Chris DeBrodie
                                ]]></string>
    <string name="wallpaper">Wallpaper</string>
    <string name="wallpaper_set">Set Wallpaper</string>
    <string name="wallpaper_blur">Blur Wallpaper</string>
    <string name="wallpaper_pick">Pick Wallpaper</string>
    <string name="wallpaper_unable_to_blur">Unable to blur</string>

    <string name="unnamed">Unnamed</string>


    // Intro

    <string name="intro_skip">Skip</string>
    <string name="intro_finish">Let\'s start.</string>

    <string name="intro1_title">OpenLauncher</string>
    <string name="intro1_text">Thank you for choosing Open Launcher. It\'s fully open source and still in development.
        Here\'s a short intro on how to use it …</string>

    <string name="intro2_title">Minibar</string>
    <string name="intro2_text">Swipe right from the left border of your screen to open the Minibar. There you can find the settings,
    change the wallpaper, and do lots of other stuff.</string>

    <string name="intro3_title">Settings</string>
    <string name="intro3_text">You can configure your desktop, the app drawer, and the dock … Just try it out!</string>


    // MiniBar

    <string name="minibar">Edit items</string>
    <string name="minibar_1">Set the wallpaper or blur it</string>
    <string name="minibar_2">Lock the screen immediately, requires device administration.</string>
    <string name="minibar_3">Free the ram, force close other running services.</string>
    <string name="minibar_4">Shortcut to device settings.</string>
    <string name="minibar_5">Shortcut to OpenLauncher settings.</string>
    <string name="minibar_6">Pick themes.</string>
    <string name="minibar_7">Open the volume dialog.</string>
    <string name="minibar_8">Open the app drawer.</string>


    // About

    <string name="about">About Open Launcher</string>
    <string name="about_libs">Open Source libraries</string>
    <string name="about_rate">Rate</string>
    <string name="about_dev">Developer</string>
    <string name="about_credit">Contributors</string>
    <string name="about_credit_text">Helped me a lot with bugs and suggestions.</string>
    <string name="about_credit_text_2">Added some settings, German translation.</string>


    // Settings

    <string name="settings">Settings</string>

    <string name="settings_column">Columns</string>
    <string name="settings_row">Rows</string>
    <string name="settings_iconPack_title">Pick icon pack</string>
    <string name="settings_iconPack_toast">Unable to grab the icon without READ_EXTERNAL_STORAGE permission.</string>

    <string name="settings_stylePicker_ex">(experimental)</string>
    <string name="settings_stylePicker_title">Desktop style</string>
    <string name="settings_stylePicker_title_drawer">Drawer style</string>
    <string name="settings_stylePicker_paged">Paged</string>
    <string name="settings_stylePicker_vertical">Vertical</string>
    <string name="settings_stylePicker_normal">Normal</string>
    <string name="settings_stylePicker_allApps">Show all apps (Experimental)</string>
    <string name="settings_single_click_title">Single click action</string>
    <string name="settings_double_click_title">Double click action</string>
    <string name="settings_pinch_title">Pinch action</string>
    <string name="settings_unpinch_title">Unpinch action</string>
    <string name="settings_swipe_down_title">Swipe down action</string>
    <string name="settings_swipe_up_title">Swipe up action</string>
    <string name="settings_gesture_none">None</string>
    <string name="settings_gesture_zero">Minbar Settings</string>
    <string name="settings_gesture_one">Set wallpaper</string>
    <string name="settings_gesture_two">Lock screen</string>
    <string name="settings_gesture_three">Clear RAM</string>
    <string name="settings_gesture_four">Device settings</string>
    <string name="settings_gesture_five">Launcher Settings</string>
    <string name="settings_gesture_six">Volume Dialog</string>
    <string name="settings_gesture_seven">Open app drawer</string>

    <string name="settings_group_desktop">Desktop</string>
    <string name="settings_group_dock">Dock</string>
    <string name="settings_group_drawer">App Drawer</string>
    <string name="settings_group_input">Gestures</string>
    <string name="settings_group_color">Colors</string>
    <string name="settings_group_icons">Icons</string>
    <string name="settings_group_other">Other</string>

    <string name="settings_desktopStyle">Style</string>
    <string name="settings_desktopStyle_summary">Choose between different styles for your desktop.</string>
    <string name="settings_desktopSearch">Search bar</string>
    <string name="settings_desktopSearch_summary">Display a search bar on top of the desktop.</string>
    <string name="settings_desktopSize">Size</string>
    <string name="settings_desktopSize_summary">Set the desktop grid size.</string>
    <string name="settings_desktopFull">Fullscreen</string>
    <string name="settings_desktopFull_summary">Enable fullscreen for your desktop.</string>
    <string name="settings_desktopIndicator">Desktop indicator</string>
    <string name="settings_desktopIndicator_summary">Show the page indicator on the desktop.</string>
    <string name="settings_desktopLabel_summary">Show app and folder names in the desktop.</string>

    <string name="settings_dockLabel">Label</string>
    <string name="settings_dockLabel_summary">Show app and folder names in the dock.</string>
    <string name="settings_dockSize">Size</string>
    <string name="settings_dockSize_summary">Set the dock size.</string>

    <string name="settings_drawerStyle">Style</string>
    <string name="settings_drawerStyle_summary">Choose between paged and vertical view for the app drawer.</string>
    <string name="settings_drawerCard">Card</string>
    <string name="settings_drawerCard_summary">Use a card as drawer background.</string>
    <string name="settings_drawerSearch">Search bar</string>
    <string name="settings_drawerSearch_summary">Will only appear in vertical view layout.</string>
    <string name="settings_drawerSearchIcon">Search icon</string>
    <string name="settings_drawerSearchIcon_summary">Show the default dark search icon in the search bar.</string>
    <string name="settings_drawerSize">Size</string>
    <string name="settings_drawerSize_summary">Set the drawer grid size.</string>
    <string name="settings_drawerPage">Remember last page</string>
    <string name="settings_drawerPage_summary">The app drawer will save the last opened page.</string>
    <string name="settings_drawerIndicator">Drawer scrollbar</string>
    <string name="settings_drawerIndicator_summary">Show the page indicator btw. the scrollbar in the drawer.</string>

    <string name="settings_desktopSwipe">Fast swipe drawer</string>
    <string name="settings_desktopSwipe_summary">Swipe up on the drawer app icon to open the app drawer.</string>
    <string name="settings_singleClick">Single click</string>
    <string name="settings_singleClick_summary">Single click action.</string>
    <string name="settings_doubleClick">Double click</string>
    <string name="settings_doubleClick_summary">Double click action.</string>
    <string name="settings_pinch">Pinch</string>
    <string name="settings_pinch_summary">Pinch action.</string>
    <string name="settings_unpinch">Unpinch</string>
    <string name="settings_unpinch_summary">Unpinch action.</string>
    <string name="settings_swipeDown">Swipe Down</string>
    <string name="settings_swipeDown_summary">Swipe down action.</string>
    <string name="settings_swipeUp">Swipe up</string>
    <string name="settings_swipeUp_summary">Swipe up action.</string>

    <string name="settings_colorDock">Dock</string>
    <string name="settings_colorDock_summary">Dock background color.</string>
    <string name="settings_colorDrawer">Drawer</string>
    <string name="settings_colorDrawer_summary">Drawer background color.</string>
    <string name="settings_colorFolder">Folder and card</string>
    <string name="settings_colorFolder_summary">Background color for folders and the app drawer card.</string>
    <string name="settings_colorLabel">Label</string>
    <string name="settings_colorLabel_summary">Label color for folders and the app drawer.</string>

    <string name="settings_iconSize">Size</string>
    <string name="settings_iconSize_summary">Size of all app icons.</string>
    <string name="settings_iconPack">Icon pack</string>
    <string name="settings_iconPack_summary">Select an installed icon pack.</string>
    <string name="settings_iconHide">Hide apps</string>
    <string name="settings_iconHide_summary">Hide selected apps from launcher.</string>

    <string name="settings_othersRestart">Restart</string>
    <string name="settings_othersRestart_summary">Restart the launcher in case it\'s behaving weird.</string>

    <string name="settings_backup">Backup</string>
    <string name="settings_backup_summary">Backup and restore your settings.</string>
    <string name="settings_backup_titleBackup">Backup</string>
    <string name="settings_backup_titleRestore">Restore</string>
    <string name="settings_backup_success">Successfully done.</string>
    <string name="settings_backup_success_not">Something went wrong.</string>


    //Icon hide

    <string name="request_dummy_text">Hello world!</string>
    <string name="request_please_wait2">Searching for installed apps. Please wait.</string>
    <string name="request_toast">No apps selected. Show all apps in drawer?</string>
    <string name="settings_group_others">Others</string>
    <string name="edit">Minibar Settings</string>

</resources>
