<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/deleteIcon"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="?android:textColorPrimary"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        android:text="@string/uninstall"
        />

    <ImageView
        android:id="@+id/infoIcon"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="?android:textColorPrimary"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_info_outline_black_24dp"
        android:text="@string/info"
        />

    <ImageView
        android:id="@+id/removeIcon"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="?android:textColorPrimary"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:text="@string/remove"
        />

</LinearLayout>