<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/desktop_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:drawable="@drawable/ic_settings_launcher_24dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_group_desktop"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/dock_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:drawable="@drawable/ic_settings_launcher_24dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_group_dock"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/app_drawer_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:drawable="@drawable/ic_settings_launcher_24dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_group_drawer"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/input_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:drawable="@drawable/ic_settings_launcher_24dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_group_input"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/colors_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:drawable="@drawable/ic_settings_launcher_24dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_group_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/icons_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:drawable="@drawable/ic_settings_launcher_24dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_group_icons"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/other_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:drawable="@drawable/ic_settings_launcher_24dp"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_group_other"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>